--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,49 +1,43 @@
- <h2 style="color:lightgreen;margin:20px 0px 0px 20px;">Games Arena</h2>
- <div style="margin:0px 20px;">
- 	<mat-form-field floatlabel="always" style="width:90%;" *ngIf="!showSection1"> 
- 		<!-- <input placeholder="Search(by name)" matInput [(ngModel)]="searchText" [matAutocomplete]="auto"/> -->
-
+ <h2 class="header">Games Arena</h2>
+ <div class="sub-header">
+ 	<mat-form-field floatlabel="always" class="search-width" *ngIf="!showSection1"> 
  		<input type="text" placeholder="Search(by name)" matInput [formControl]="myControl" [matAutocomplete]="auto" [(ngModel)]="searchText" [disabled]="true">
  		<mat-autocomplete #auto="matAutocomplete">
  			<mat-option *ngFor="let game of filteredGames | async" [value]="game.title">
  				{{game.title}}
  			</mat-option>
  		</mat-autocomplete>
-
  	</mat-form-field>
- 	<!-- <img src="assets/filter.png" height="30" width="30" style="margin-left:20px;"/> -->
- 	<mat-icon color="primary" (click)="onClickSort()" style="margin-left:20px;" matTooltip="Sort" *ngIf="!showSection1">sort</mat-icon>
- 	<mat-icon color="primary" (click)="showSection1 ? showSection1 = false : showSection1 = true;" style="margin-left:20px;" matTooltip="Categorize">category</mat-icon>
+ 	<mat-icon color="primary" class="margin-left-20" (click)="onClickSort()" matTooltip="Sort" *ngIf="!showSection1">sort</mat-icon>
+ 	<mat-icon color="primary" class="margin-left-20" (click)="showSection1 ? showSection1 = false : showSection1 = true;" matTooltip="Categorize">category</mat-icon>
  </div>
 
 
- <div style="background-color: #e6e6e6;">
+ <div class="grey-background">
  	<div class="container" *ngIf="showSection1">
  		<div *ngFor="let games of groupedGames">
-
  			<mat-toolbar>
  				<mat-toolbar-row>
  					<span>{{games[0].platform}}</span>
  				</mat-toolbar-row>
  			</mat-toolbar>
-
  			<div class="row">
  				<div class="col-lg-4" *ngFor="let game of games">
- 					<div class="card" style="border-radius: 25px;box-shadow: 2px 2px #888888;height:205px;margin:10px;">
+ 					<div class="card card-style">
  						<div class="card-body">
  							<div class="row">
- 								<div class="col-lg-4" style="background-color: black;margin:5px;height:70px;width:50px;"></div>
+ 								<div class="col-lg-4 card-content"></div>
  								<div class="col-lg-6">
  									<label>{{game.title}}</label>
- 									<label style="display:block;font-size:12px;">{{game.platform}}</label>
+ 									<label class="game-platform">{{game.platform}}</label>
  								</div>
- 								<mat-icon style="color:yellow;" *ngIf="game.editors_choice==='Y'">grade</mat-icon>
+ 								<mat-icon class="yellow-font" *ngIf="game.editors_choice==='Y'">grade</mat-icon>
  							</div>
  						</div>
  						<div class="card-footer text-muted">
- 							<div style="display:flex;justify-content: space-between;">
+ 							<div class="game-footer">
  								<label>Genre: {{game.genre}}</label>
- 								<label style="color:red;">{{game.score}}</label>
+ 								<label class="redFont">{{game.score}}</label>
  							</div>
  						</div>
  					</div>
@@ -51,30 +45,31 @@
  			</div>
  		</div>
  	</div>
+
  	<div class="container" *ngIf="!showSection1">
  		<div class="row">
  			<div class="col-lg-4" *ngFor="let game of games | filter : searchText | paginate: {itemsPerPage:6, currentPage:p}">
- 				<div class="card" style="border-radius: 25px;box-shadow: 2px 2px #888888;height:205px;margin:10px;">
+ 				<div class="card card-style">
  					<div class="card-body">
  						<div class="row">
- 							<div class="col-lg-4" style="background-color: black;margin:5px;height:70px;width:50px;"></div>
+ 							<div class="col-lg-4 card-content"></div>
  							<div class="col-lg-6">
  								<label>{{game.title}}</label>
- 								<label style="display:block;font-size:12px;">{{game.platform}}</label>
+ 								<label class="game-platform">{{game.platform}}</label>
  							</div>
- 							<mat-icon style="color:yellow;" *ngIf="game.editors_choice==='Y'">grade</mat-icon>
+ 							<mat-icon class="yellow-font" *ngIf="game.editors_choice==='Y'">grade</mat-icon>
  						</div>
  					</div>
  					<div class="card-footer text-muted">
- 						<div style="display:flex;justify-content: space-between;">
+ 						<div class="game-footer">
  							<label>Genre: {{game.genre}}</label>
- 							<label style="color:red;">{{game.score}}</label>
+ 							<label class="redFont">{{game.score}}</label>
  						</div>
  					</div>
  				</div>
  			</div>	
  		</div>
- 		<div style="text-align:center;margin-top:10px;">
+ 		<div class="footer">
  			<pagination-controls (pageChange)="p =$event" maxSize="5"></pagination-controls>
  		</div>
  	</div>
